# CompGeom_FinalProject

./: CDT.cpp  CDTPath.py  CDT_Example.cpp  CMakeLists.txt  ConvexHull.py  ConvexHullObstacles.py  ConvexHullPoints.txt  ConvexHullTakeTwo.py  CustomTree.py  LICENSE  PolygonBreakdown.py  README.md  RobotCommands.py  motor_example.py
scrapped_files/: CDT.cpp  ConvexHull.py  ConvexHullPoints.txt  RobotCommands.py  motor_example.py
